cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: synchrocise-webapp
  name: synchrocise-webapp
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: synchrocise-webapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: synchrocise-webapp
    spec:
      containers:
      - image: gcr.io/synchrocise-dev/app:v1
        name: webapp
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 3001
            protocol: TCP
