cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"ports": {"80":"api-backend"}}'
spec:
  type: LoadBalancer
  sessionAffinity: ClientIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3001
  selector:
    app: synchrocise-webapp
