cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    nginx.org/websocket-services: api
    networking.gke.io/v1beta1.FrontendConfig: "ssl-redirect"
    kubernetes.io/ingress.global-static-ip-name: synchrocise-ip
    networking.gke.io/managed-certificates: synchrocise-certificate
    cloud.google.com/backend-config: '{"default": "api-backend"}'
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: api
      port:
        number: 80
